--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-ble-plx": "^0.8.0"
+    "react-native-bluetooth-serial": "https://github.com/wisdom-garden/react-native-bluetooth-serial.git"
   }
 }
